--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
     "react": "^16.12.0",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.12.0",
     "style-loader": "^0.18.2",
     "webpack": "^4.44.2",
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "socket.io-client": "^2.3.1"
   }
 }
