--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "react-bootstrap-validation": "^0.1.11",
     "socket.io-client": "^2.3.1"
   }
 }
