--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     ]
   },
   "dependencies": {
-    "react-google-login": "^5.1.22",
     "bootstrap": "^4.5.3",
     "react-bootstrap-validation": "^0.1.11",
+    "react-google-login": "^5.1.22",
+    "react-microsoft-login": "^1.10.1",
     "socket.io-client": "^2.3.1"
   }
 }
