--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "react-bootstrap-validation": "^0.1.11",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
     "react-microsoft-login": "^1.10.1",
     "socket.io-client": "^2.3.1"
