--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ python-dotenv==0.15.0
 gunicorn==20.0.4
 eventlet==0.29.1
 Flask==1.1.2
+Flask-Session==0.3.2
 Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 psycopg2==2.8.6
