--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
     "react-microsoft-login": "^1.10.1",
+    "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1"
   }
 }
