--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "socket.io-client": "^2.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.2.0",
-    "socket.io-client": "^2.3.1"
+    "react-router-dom": "^5.2.0"
   }
 }
