--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,13 @@ version: 2.1
 orbs:
   python: circleci/python@0.2.1
 
+general:
+  branches:
+    only:
+      - main
+
 jobs:
   build-and-test:
-    branches:
-      only:
-      - main
     executor: python/default
     steps:
       - checkout
