--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,11 @@ version: 2.1
 orbs:
   python: circleci/python@0.2.1
 
-general:
-  branches:
-    only:
-      - main
-
 jobs:
   build-and-test:
+    filters:
+      branches:
+        only: main
     executor: python/default
     steps:
       - checkout
