--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build-and-test:
         filters:
           branches:
             only: main
