forgot to add build and test back.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
 workflows:
   main:
     jobs:
+      - build-and-test
       - heroku/deploy-via-git:
           requires:
               - build-and-test
