--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "react": "^16.12.0",
     "react-bootstrap-validation": "^0.1.11",
+    "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
     "react-microsoft-login": "^1.10.1",
-    "socket.io-client": "^2.3.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io-client": "^2.3.1"
   }
 }
