--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       - run:
           name: Run unit tests
           command: |
-            $HOME/.local/lib/python3.9/site-packages/coverage/coverage run -m pytest tests/
-            $HOME/.local/lib/python3.9/site-packages/coverage/coverage report
-            $HOME/.local/lib/python3.9/site-packages/coverage/coverage html
+            coverage run -m pytest tests/
+            coverage report
+            coverage html
       - store_artifacts:
           path: htmlcov
 
