--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,9 @@ jobs:
       - run:
           name: Run unit tests
           command: |
-            coverage run -m pytest tests/
-            coverage report
-            coverage html
+            python -m coverage run -m pytest tests/
+            python -m coverage report
+            python -m coverage html
       - store_artifacts:
           path: htmlcov
 
