--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,15 @@ orbs:
 
 jobs:
   build-and-test:
+    docker:
+      - image: circleci/python:3.6.2-stretch-browsers
+        environment:
+          DATABASE_URL: postgresql://postgres@localhost/circle_test?sslmode=disable
+      - image: circleci/postgres:9.6.5-alpine-ram
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: circle_test
+          POSTGRES_PASSWORD: ''
     executor: python/default
     steps:
       - checkout
