--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-google-login": "^5.1.22",
     "react-microsoft-login": "^1.10.1",
     "react-router-dom": "^5.2.0",
-    "socket.io-client": "^2.3.1"
+    "socket.io-client": "^2.3.1",
+    "validator": "^13.1.17"
   }
 }
