--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
-    "react-bootstrap": "^0.31.5",
     "style-loader": "^0.18.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
@@ -43,6 +42,7 @@
     "react-microsoft-login": "^1.10.1",
     "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "react-bootstrap": "^0.31.5"
   }
 }
