--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^0.31.5",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
@@ -42,7 +44,6 @@
     "react-microsoft-login": "^1.10.1",
     "react-router-dom": "^5.2.0",
     "socket.io-client": "^2.3.1",
-    "validator": "^13.1.17",
-    "react-bootstrap": "^0.31.5"
+    "validator": "^13.1.17"
   }
 }
