--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "socket.io-client": "^2.3.1",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
