--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,12 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
     "socket.io-client": "^2.3.1",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "react-bootstrap": "^1.4.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.23",
+    "react-microsoft-login": "^1.10.1",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
