--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.23",
+    "react-icons": "^3.11.0",
     "react-microsoft-login": "^1.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
