--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ workflows:
       - build-and-test
       - heroku/deploy-via-git:
           requires:
+              - node/test
               - build-and-test
           filters:
               branches:
