--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      - image: circleci/python:3.6.2-stretch-browsers
+      - image: cimg/python:3.8.6-node
         environment:
           DATABASE_URL: postgresql://postgres@localhost/circle_test?sslmode=disable
       - image: circleci/postgres:9.6.5-alpine-ram
