--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,16 @@ jobs:
     executor: python/default
     steps:
       - checkout
+      - node/install
       - python/load-cache
       - python/install-deps
       - python/save-cache
       - run:
-          name: Run unit tests
+          name: Run front-end unit tests
+          commmand: |
+            npm run test
+      - run:
+          name: Run back-end unit tests
           command: |
             python -m coverage run -m pytest tests/
             python -m coverage report
@@ -34,11 +39,9 @@ jobs:
 workflows:
   main:
     jobs:
-      - node/test
       - build-and-test
       - heroku/deploy-via-git:
           requires:
-              - node/test
               - build-and-test
           filters:
               branches:
