--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
       - run:
           name: Run unit tests
           command: |
-            npm run test
+            npm install
+            npm run build
             python -m coverage run -m pytest tests/
             python -m coverage report
             python -m coverage html
