--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,14 @@ jobs:
     executor: python/default
     steps:
       - checkout
-      # - node/install
+      - node/install-packages
       - python/load-cache
       - python/install-deps
       - python/save-cache
       - run:
           name: Run unit tests
           command: |
-            npm install
-            npm run build
+            CI=false npm run build
             python -m coverage run -m pytest tests/
             python -m coverage report
             python -m coverage html
