--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "jquery": "^1.9.1",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -20,8 +21,7 @@
     "react-scripts": "4.0.0",
     "socket.io-client": "^2.3.1",
     "validator": "^13.1.17",
-    "web-vitals": "^0.2.4",
-    "prop-types": "^15.7.2"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
